Date	Added
12/10
        * Fixed players unable to move in AFM maps [celest]
        * Added error message if a player's last map couldn't be found [celest]
        * Moved AFM map check to map_mapname2mapid [celest]
        * Added USE_AFM and USE_AF2 to be used later [celest]
        * Modified sc_data check in pc_damage [celest]

12/9
	* Moved a map_freeblock_unlock() around to eliminate a 
	  crash [MouseJstr]
	* Fixed how players are cleaned up when they disconnected
	  during authentication [MouseJstr]
	* Adjusted some messages in @marry [MouseJstr]
        * Skill Updates [celest]
          - Fixed Auto Spell not working
          - Fixed skill level check causing Baphomet card not to work at all (possibly
            other problems too)
          - Added some new monster skills based on jA mod 1077
        * Changed @job to accept text job names - For example: @job wizard, @job high
          priestess, @job super baby [celest]
        * Added sc_data check for pc_damage [celest]

12/8
	* Fixed @rings [MouseJstr]
        * Added @marry, @divorce, and @rings [MouseJstr]
        * fixed @revive [MouseJstr]
        * Added option to turn off login server logging [celest]
        * Moved char server starting logging to after we've read the configuration
          file first [celest]
        * Fixed crash with supernovices with 100% base exp [celest]
	* Updated the readme a little. [Mass Zero]

12/7
	* Added GUILDCACHE #define to int_guild.c for testing performance
	  effects [MouseJstr]
        * Skill Updates [celest]
          - Arrow Shower, Double Strafing, Charge Arrow, Throw Arrow, Sharp Shooting,
            Arrow Vulcan, and Musical Strike now take arrows when used
          - Level 6-10 Stone Curse will not consume a red gem now when it fails
          - Players should be able to use items when they're stoned but not yet
            completely petrified
          - Corrected Triple Blow to work with bows (they actually do ^^)