@@ -265,3 +265,23 @@
 501: Your account time limit is: %d-%m-%Y %H:%M:%S.
 502: The day has arrived!
 503: The night has fallen...
+
+//mail system
+//----------------------
+510: You have no messages.
+511: %d - From : %s (New - Priority)
+512: %d - From : %s (New)
+513: %d - From : %s
+514: You have %d new messages.
+515: You have %d unread priority messages.
+516: You have no new messages.
+517: Message not found.
+518: Reading message from %s.
+519: Cannot delete unread priority mail.
+520: You have recieved new mail, use @listmail before deleting.
+521: Message deleted.
+522: You must wait 10 minutes before sending another message.
+523: Access Denied.
+524: Character does not exist.
+525: Mail has been sent.
+526: You have new mail.
